Job offer functionality
- Implemented job offer functionality (except returning applications,
  which will be done later)
- Adjusted swagger to reflect newly added endpoints
- Made minor refactoring to logic to help extract user id better from
  jwt token
