# src/main/java/com/jobly/enums/WorkType.java
@@ -1,7 +1,0 @@
-package com.jobly.enums;
-
-public enum WorkType {
-    ON_SITE,
-    REMOTE,
-    HYBRID
-}
